methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:18: error: Unmatched closing brace '}' ignored here
}
^