methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   while (estSurBiscuit()==false){
     gauche()     
     if (estFaceMur()==false){
         avance(); 
         if (getCouleurSol()!=Color.green){
           recule()
         }
       }
      droite(); droite()
     }
   }
	return estSurBiscuit()
}